# flash-attention

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
analysis/: numerical_drift.py
benchmarks/: dump_hlo.py  plot_results.py  run_benchmark.py
flash_attention/: __init__.py  naive.py  pallas_kernel.py
notebooks/: colab_runner.ipynb
results/cpu-interpret/: README.md  results.csv
results/hlo/: hlo_naive_seq1024.txt  hlo_naive_seq256.txt  hlo_naive_seq512.txt
results/numerical-drift/: numerical_drift.csv
tests/: test_correctness.py
